# Word-finder

./: CMakeLists.txt  README.md  Word-finder.vcxproj  Word-finder.vcxproj.filters
Headers/: WordFinder.h  WordFinderWorker.h
Resources/: Resource.qrc  Word-finder.rc  fr.qm  fr.ts  main.fr.qm  resource.h
Source/: WordFinder.cpp  WordFinderWorker.cpp  main.cpp
deployment/components/com.vendor.product/meta/: package.xml  script.qs
deployment/config/: config.xml
resources/: CMakeLists.txt  Word-finder_fr.ts  icon.rc
src/: QWordFinder.cpp  QWordFinder.hpp  QWordFinderWorker.cpp  QWordFinderWorker.hpp  WordFinder.cpp  WordFinder.h  WordFinder.hpp  WordFinderWorker.cpp  WordFinderWorker.hpp  main.cpp
